--- a/index.html
+++ b/index.html
@@ -25,14 +25,29 @@
                 <img src="owl.svg" alt="Hero Immge" draggable="false">
             </div>
             <div class="hero-content">
-                <h1>Gufo Labs Documentation</h1>
-                <p>This site hosts documentation of the
+                <h1>Gufo Stack Documentation</h1>
+                <p>
+                    This site hosts documentation of the
                     <a href="https://gufolabs.com/" target="_blank">Gufo Labs</a> projects
                 </p>
             </div>
         </div>
     </section>
     <section class="main">
+        <div class="foreword">
+            <p>Gufo Stack is the collaborative effort led by <a href="https://gufolabs.com/">Gufo Labs</a>. Our goal is
+                to create a robust and flexible set
+                of tools to
+                create network management software and automate routine administration tasks.</p>
+
+            <p>To do this, we extract the key technologies that have proven themselves in the <a
+                    href="https://getnoc.com/">NOC</a> and bring them as
+                separate packages. Then we work on API, performance tuning, documentation, and testing. The NOC uses the
+                final result as the external dependencies.</p>
+
+            <p>Gufo Stack makes the NOC better, and this is our primary task. But other products can benefit from Gufo
+                Stack too. So we believe that our effort will make the other network management products better.</p>
+        </div>
         <div class="items">
             <a href="/gufo_loader/">
                 <div class="item">
