--- a/index.html
+++ b/index.html
@@ -114,6 +114,14 @@
                     </div>
                 </div>
             </a>
+            <a href="/gufo_acme/">
+                <div class="item">
+                    <div class="gs gufo-acme">AG</div>
+                    <div class="title">Gufo ACME</div>
+                    <div class="description">Python asyncio client for the ACME protocol
+                    </div>
+                </div>
+            </a>
         </div>
     </section>
     <footer>
