--- a/index.html
+++ b/index.html
@@ -116,9 +116,17 @@
             </a>
             <a href="/gufo_acme/">
                 <div class="item">
-                    <div class="gs gufo-acme">AG</div>
+                    <div class="gs gufo-acme">ACME</div>
                     <div class="title">Gufo ACME</div>
                     <div class="description">Python asyncio client for the ACME protocol
+                    </div>
+                </div>
+            </a>
+            <a href="/csr_proxy/">
+                <div class="item">
+                    <div class="gs csr-proxy">CSRP</div>
+                    <div class="title">Gufo ACME</div>
+                    <div class="description">Simple service to sign the clients' CSR via the ACME server.
                     </div>
                 </div>
             </a>
