--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
             </a>
             <a href="/csr_proxy/">
                 <div class="item">
-                    <div class="gs csr-proxy">CSRP</div>
-                    <div class="title">Gufo ACME</div>
+                    <div class="gs csr-proxy">CSR</div>
+                    <div class="title">CSR Proxy</div>
                     <div class="description">Simple service to sign the clients' CSR via the ACME server.
                     </div>
                 </div>
