--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     </div>
                 </div>
             </a>
-            <a href="/csr-proxy/">
+            <a href="/csr_proxy/">
                 <div class="item">
                     <div class="gs csr-proxy">CSR</div>
                     <div class="title">CSR Proxy</div>
