--- a/index.html
+++ b/index.html
@@ -126,7 +126,15 @@
                 <div class="item">
                     <div class="gs csr-proxy">CSR</div>
                     <div class="title">CSR Proxy</div>
-                    <div class="description">Simple service to sign the clients' CSR via the ACME server.
+                    <div class="description">Simple service to sign the clients' CSR via the ACME server
+                    </div>
+                </div>
+            </a>
+            <a href="/gufo_thor/">
+                <div class="item">
+                    <div class="gs gufo-thor">Thor</div>
+                    <div class="title">Gufo Thor</div>
+                    <div class="description">Simple NOC management and deployment tool
                     </div>
                 </div>
             </a>
