--- a/index.html
+++ b/index.html
@@ -100,7 +100,16 @@
                 <div class="item">
                     <div class="gs gufo-snmp">SNMP</div>
                     <div class="title">Gufo SNMP</div>
-                    <div class="description">The accelerated Python asyncio SNMP
+                    <div class="description">The accelerated Python SNMP
+                        client library
+                    </div>
+                </div>
+            </a>
+            <a href="/gufo_http/">
+                <div class="item">
+                    <div class="gs gufo-http">HTTP</div>
+                    <div class="title">Gufo HTTP</div>
+                    <div class="description">The accelerated Python HTTP
                         client library
                     </div>
                 </div>
